# substrate-evm

./: Cargo.toml  README.md  makefile
rpi/: Dockerfile  README.md  pi-build.sh
runtime/: Cargo.toml
runtime/src/: lib.rs
src/: chain_spec.rs  main.rs  service.rs
ui/: README.md  package.json
ui/public/: index.html
ui/src/: App.js  EVMAccounts.js  EVMContracts.js
ui/src/config/: common.json
ui/src/substrate-lib/: utils.js
ui/src/substrate-lib/components/: TxButton.js
utils/: erc20-slot.js  index.js  package-lock.json  package.json
