[profile.release]
panic = 'unwind'

[package]
authors = ['Dan Forbes <dan@danforbes.dev>']
build = 'build.rs'
edition = '2018'
name = 'substrate-evm-template'
version = '2.0.0'

[build-dependencies]
vergen = '3.0.4'

[build-dependencies.build-script-utils]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-build-script-utils'
branch = 'master'
version = '2.0.0'

[dependencies]
futures = '0.3.1'
log = '0.4.8'
parking_lot = '0.9.0'
structopt = "0.3.8"
tokio = '0.1.22'
trie-root = '0.15.2'

[dependencies.codec]
package = 'parity-scale-codec'
version = '1.0.0'

[dependencies.ctrlc]
features = ['termination']
version = '3.1.3'

[dependencies.evm]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-evm'
branch = 'master'
version = '2.0.0'

[dependencies.futures01]
package = 'futures'
version = '0.1.29'

[dependencies.grandpa]
git = 'https://github.com/paritytech/substrate.git'
package = 'sc-finality-grandpa'
branch = 'master'
version = '0.8.0'

[dependencies.grandpa-primitives]
git = 'https://github.com/paritytech/substrate.git'
package = 'sp-finality-grandpa'
branch = 'master'
version = '2.0.0'

[dependencies.substrate-evm-runtime]
path = 'runtime'
version = '2.0.0'

[dependencies.sc-basic-authorship]
git = 'https://github.com/paritytech/substrate.git'
branch = 'master'

[dependencies.sc-cli]
git = 'https://github.com/paritytech/substrate.git'
branch = 'master'
version = '0.8.0'

[dependencies.sc-client]
git = 'https://github.com/paritytech/substrate.git'
branch = 'master'
version = '0.8.0'

[dependencies.sc-consensus-aura]
git = 'https://github.com/paritytech/substrate.git'
branch = 'master'
version = '0.8'

[dependencies.sc-executor]
git = 'https://github.com/paritytech/substrate.git'
branch = 'master'
version = '0.8.0'

[dependencies.sc-network]
git = 'https://github.com/paritytech/substrate.git'
branch = 'master'
version = '0.8'

[dependencies.sc-service]
git = 'https://github.com/paritytech/substrate.git'
branch = 'master'
version = '0.8.0'

[dependencies.sc-transaction-pool]
git = 'https://github.com/paritytech/substrate.git'
branch = 'master'
version = '2.0.0'

[dependencies.sp-consensus]
git = 'https://github.com/paritytech/substrate.git'
branch = 'master'
version = '0.8'

[dependencies.sp-consensus-aura]
git = 'https://github.com/paritytech/substrate.git'
branch = 'master'
version = '0.8'

[dependencies.sp-core]
git = 'https://github.com/paritytech/substrate.git'
branch = 'master'
version = '2.0.0'

[dependencies.sp-inherents]
git = 'https://github.com/paritytech/substrate.git'
branch = 'master'
version = '2.0.0'

[dependencies.sp-io]
git = 'https://github.com/paritytech/substrate.git'
branch = 'master'
version = '2.0.0'

[dependencies.sp-runtime]
git = 'https://github.com/paritytech/substrate.git'
branch = 'master'
version = '2.0.0'

[dependencies.sp-transaction-pool]
git = 'https://github.com/paritytech/substrate.git'
branch = 'master'
version = '2.0.0'

[workspace]
members = ['runtime']

[[bin]]
name = 'substrate-evm'
path = 'src/main.rs'
